--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <!-- Press -->
 
         <section id="press">
-            <img src="images/techcrunch.png" class="press" alt="tc-logo">
+            <img src="images/TechCrunch.png" class="press" alt="tc-logo">
             <img src="images/tnw.png" class="press" alt="tnw-logo">
             <img src="images/bizinsider.png" class="press" alt="biz-insider-logo">
             <img src="images/mashable.png" class="press" alt="mashable-logo">
